Update and rename index.html to Index.html

--- a/Projeto financeiro- Isaac Bass/Projeto_financeiro/Index.html
+++ b/Projeto financeiro- Isaac Bass/Projeto_financeiro/Index.html
@@ -35,7 +35,7 @@
 </div>
 </nav>
 
-    <!-- home section start -->
+    <!-- Começo seção home -->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -50,7 +50,7 @@ Investment <span class="typing"></span></div>
 </div>
 </section>
 
-    <!-- about section start -->
+    <!-- Seção sobre nós começo -->
     <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">
@@ -73,7 +73,7 @@ Sobre nós</h2>
 </div>
 </section>
 
-    <!-- services section start -->
+    <!-- Seção de serviços começo -->
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">
@@ -111,7 +111,7 @@ Previdencia Privada & Seguro de vida</div>
 </div>
 </section>
 
-    <!-- investment section start -->
+    <!-- Seção de investimentos Começo -->
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">
@@ -170,7 +170,7 @@ Nós iremos explicar para você como a gente trabalha e explicaremos qual é a m
 </div>
 </section>
 
-    <!-- teams section start -->
+    <!-- Seção falando um pouco da equipe -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">
@@ -217,7 +217,7 @@ Isabelly</div>
 </div>
 </section>
 
-    <!-- contact section start -->
+    <!-- Seção de contatos comecço-->
     <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">
@@ -265,7 +265,7 @@ alphainvestment7@gmail.com</div>
 </div>
 </section>
 
-    <!-- footer section start -->
+    <!-- Rodapé -->
     <footer>
         <span>Criado por<a href="https://www.instagram.com/joh.ncode/">JohnCode</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
         <div>Logótipo feito com <a href="https://www.designevo.com/pt/logo-maker/" title="Criador de Logótipos Online Grátis">DesignEvo</a></div>
